# deep-query

./: .env.template  .gitignore  README.md  openapi.yaml  pyproject.toml
cognition/: __init__.py  __main__.py  classifier.py  config.py  formatter.py  main.py  models.py  parser.py  search.py  utils.py
fetcher/: __init__.py  api_client.py  config.py  formatter.py  http_utils.py  main.py  models.py  services.py
